<resources>
    <string name="app_name">338Project2_groovy</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="enter_username_login">Enter username</string>
    <string name="enter_username">Enter username</string>
    <string name="grade_assignment_tracker">Grade / Assignment Tracker</string>
    <string name="create_an_account">Create an Account</string>
    <string name="enter_password">Enter password</string>
    <string name="login_loginPage">Login</string>
    <string name="welcome">Welcome</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="sign_out">Sign out</string>
    <string name="view_change_classes">View Classes</string>
    <string name="add_a_class">Add a Class</string>
    <string name="class_name">Class Name:</string>
    <string name="grade">Grade:</string>
    <string name="add_a_class_add">Add a Class</string>
    <string name="enter_class_name">Enter class name</string>
    <string name="enter_class_grade">Enter class grade</string>
    <string name="add_class">Add Class</string>
    <string name="your_classes">Your Classes</string>
    <string name="back">Back</string>
    <string name="update_classes">Update Classes</string>
    <string name="update_a_class">Update a Class</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="create_username">Username</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="create_password">Create Password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="create_account">Create Account</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="re_enter_password_verification">Re-enter password</string>
    <string name="edit_user_login">Edit User Login</string>
    <string name="delete_a_user">Delete a User</string>
    <string name="adminBack">Back</string>
    <string name="delete_a_user_account">Delete a User Account</string>
    <string name="edit_user_information">Edit User Information</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_password">Edit Password</string>
    <string name="update_user">Update User</string>
</resources>