<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAcc">

  <TextView
      android:id="@+id/textView"
      android:layout_width="357dp"
      android:layout_height="147dp"
      android:text="@string/create_your_account"
      android:textAlignment="center"
      android:textSize="50sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.047" />

  <TextView
      android:layout_width="172dp"
      android:layout_height="39dp"
      android:text="@string/create_username"
      android:textAlignment="0"
      android:textSize="25sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.072"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.305" />

  <TextView
      android:layout_width="310dp"
      android:layout_height="37dp"
      android:text="@string/create_password"
      android:textAlignment="0"
      android:textSize="25sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.168"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.455" />

  <TextView
      android:layout_width="310dp"
      android:layout_height="37dp"
      android:text="@string/re_enter_password_verification"
      android:textAlignment="0"
      android:textSize="25sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.158"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.605" />

  <EditText
      android:id="@+id/new_username"
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:hint="@string/enter_a_username"
      android:inputType="text"
      android:textAlignment="0"
      android:textColorHint="@color/cardview_dark_background"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.144"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.353"
      tools:ignore="Autofill" />

  <EditText
      android:id="@+id/new_password"
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:hint="@string/enter_a_password"
      android:inputType="textPassword"
      android:textAlignment="0"
      android:textColorHint="@color/cardview_dark_background"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.144"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.518"
      tools:ignore="Autofill" />

  <EditText
      android:id="@+id/verify_password"
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:hint="@string/re_enter_password"
      android:inputType="textPassword"
      android:textAlignment="0"
      android:textColorHint="@color/cardview_dark_background"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.153"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.656"
      tools:ignore="Autofill" />

  <Button
      android:id="@+id/createFinalAccount"
      android:layout_width="200dp"
      android:layout_height="75dp"
      android:text="@string/create_account"
      android:textSize="23sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.943" />
</androidx.constraintlayout.widget.ConstraintLayout>